--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
     <script src="scripts.js" defer></script>
 </head>
 <body>
-    <div class="header">
-        <h1>This is not a real online service! Sign up now for this
-            amazing service to help realize your dreams.</h1>
+    <div class="container">
+        <div class="container-right">
+            <h1>This is not a real online service! Sign up now for this
+                amazing service to help realize your dreams.</h1>
+                <div>
+                    <form action="post">
+                        <label for="">First Name</label>
+                        <input type="text">
+                        <label for="">Last Name</label>
+                        <input type="text">
+                        <label for="">Email</label>
+                        <input type="email" name="" id="">
+                        <label for="">Phone Number</label>
+                        <input type="number" name="" id="">
+                        <label for="">Password</label>
+                        <input type="password" name="" id="">
+                        <label for="">Confirm Password</label>
+                        <input type="password" name="" id="">
+                    </form>
+                </div>
+        </div>
+        <div class="container-left">Sidebar</div>
     </div>
-    <div>Sidebar</div>
-    <div>
-        <form action="post">
-            <label for="">First Name</label>
-            <input type="text">
-            <label for="">Last Name</label>
-            <input type="text">
-            <label for="">Email</label>
-            <input type="email" name="" id="">
-            <label for="">Phone Number</label>
-            <input type="number" name="" id="">
-            <label for="">Password</label>
-            <input type="password" name="" id="">
-            <label for="">Confirm Password</label>
-            <input type="password" name="" id="">
-        </form>
-    </div>
+    
 </body>
 </html>
