Added background image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="/images/roberto-nickson-5wFcCUT9THY-unsplash.jpg" alt="starry night on a dock">
         <div class="container-right">
             <h1>This is not a real online service! Sign up now for this
                 amazing service to help realize your dreams.</h1>
@@ -30,7 +31,9 @@
                     </form>
                 </div>
         </div>
-        <div class="container-left">Sidebar</div>
+        <div class="container-left">
+            <a href="https://unsplash.com/@rpnickson">Photo by Roberto Nickson on Unsplash</a>
+        </div>
     </div>
     
 </body>
