Added logo section & adjusted credit section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <div class="container-left">
+            <p class="logo">Logo</p>
             <a href="https://unsplash.com/@rpnickson" class="credit">Photo by Roberto Nickson on Unsplash</a>
         </div>
         <div class="container-right">
