Added create account section

--- a/index.html
+++ b/index.html
@@ -15,24 +15,30 @@
             <a href="https://unsplash.com/@rpnickson" class="credit">Photo by Roberto Nickson on Unsplash</a>
         </div>
         <div class="container-right">
-            <h1>This is not a real online service! Sign up now for this
-                amazing service to help realize your dreams.</h1>
-                <div>
-                    <form action="post">
-                        <label for="">First Name</label>
-                        <input type="text">
-                        <label for="">Last Name</label>
-                        <input type="text">
-                        <label for="">Email</label>
-                        <input type="email" name="" id="">
-                        <label for="">Phone Number</label>
-                        <input type="number" name="" id="">
-                        <label for="">Password</label>
-                        <input type="password" name="" id="">
-                        <label for="">Confirm Password</label>
-                        <input type="password" name="" id="">
-                    </form>
-                </div>
+            <div>
+                <h1>This is not a real online service! Sign up now for this
+                    amazing service to help realize your dreams.</h1>
+            </div>  
+            <div>
+                <form action="post">
+                    <label for="">First Name</label>
+                    <input type="text">
+                    <label for="">Last Name</label>
+                    <input type="text">
+                    <label for="">Email</label>
+                    <input type="email" name="" id="">
+                    <label for="">Phone Number</label>
+                    <input type="number" name="" id="">
+                    <label for="">Password</label>
+                    <input type="password" name="" id="">
+                    <label for="">Confirm Password</label>
+                    <input type="password" name="" id="">
+                </form>
+            </div>
+            <div>
+                <button>Create Account</button>
+                <p>Already have an account? Log in</p>
+            </div>
         </div>
         
     </div>
