--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <a href="https://unsplash.com/@rpnickson" class="credit">Photo by Roberto Nickson on Unsplash</a>
         </div>
         <div class="container-right">
-            <div>
+            <div class="header">
                 <h1>This is not a real online service! Sign up now for this
                     amazing service to help realize your dreams.</h1>
             </div>  
-            <div>
+            <div class="formsec">
                 <form action="post">
                     <label for="">First Name</label>
                     <input type="text">
@@ -35,7 +35,7 @@
                     <input type="password" name="" id="">
                 </form>
             </div>
-            <div>
+            <div class="bottomsec">
                 <button>Create Account</button>
                 <p>Already have an account? Log in</p>
             </div>
