--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     amazing service to help realize your dreams.</h1>
             </div>  
             <div class="formsec">
+                <h1>Sign up</h1>
                 <form action="post">
                     <label for="">First Name</label>
                     <input type="text">
