Styled form inputs

--- a/index.html
+++ b/index.html
@@ -22,18 +22,45 @@
             <div class="formsec">
                 <h1>Sign up</h1>
                 <form action="post">
-                    <label for="">First Name</label>
-                    <input type="text">
-                    <label for="">Last Name</label>
-                    <input type="text">
-                    <label for="">Email</label>
-                    <input type="email" name="" id="">
-                    <label for="">Phone Number</label>
-                    <input type="number" name="" id="">
-                    <label for="">Password</label>
-                    <input type="password" name="" id="">
-                    <label for="">Confirm Password</label>
-                    <input type="password" name="" id="">
+                    <div class="fr">
+                        <div>
+                            <label for="">First Name</label>
+                        </div>
+                        <div>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <label for="">Last Name</label>
+                        </div>
+                        <div>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <label for="">Email</label>
+                        </div>
+                        <div>
+                            <input type="email" name="" id="">
+                        </div>
+                    </div>
+                    <div class="fr">
+                        <div>
+                            <label for="">Phone Number</label>
+                        </div>
+                        <div>
+                            <input type="number" name="" id="">
+                        </div>
+                        <div>
+                            <label for="">Password</label>
+                        </div>
+                        <div>
+                            <input type="password" name="" id="">
+                        </div>
+                        <div>
+                            <label for="">Confirm Password</label>
+                        </div>
+                            <input type="password" name="" id="">
+                        </div>
+                    </div>
                 </form>
             </div>
             <div class="bottomsec">
