Added missing div

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         <div>
                             <label for="">Confirm Password</label>
                         </div>
+                        <div>
                             <input type="password" name="" id="">
                         </div>
                     </div>
