Changed sidebar image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="container-left">
             <p class="logo">Logo</p>
-            <a href="https://unsplash.com/@rpnickson" class="credit">Photo by Roberto Nickson on Unsplash</a>
+            <a href="https://unsplash.com/@tarun_gudipalli" class="credit">Photo by Tarun on Unsplash</a>
         </div>
         <div class="container-right">
             <div class="header">
