Added new font and logo svg

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="container-left">
-            <p class="logo">Logo</p>
+            <p class="logo">CUBEX</p>
             <a href="https://unsplash.com/@tarun_gudipalli" class="credit">Photo by Tarun on Unsplash</a>
         </div>
         <div class="container-right">
