Added in cubex logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <div class="container">
         <div class="container-left">
-            <p class="logo">CUBEX</p>
+            <div class="logo">
+                <img src="/images/1378227419.svg" alt="cube" height="50px">
+                <p class="logo-text">CUBEX</p>
+            </div>
             <a href="https://unsplash.com/@tarun_gudipalli" class="credit">Photo by Tarun on Unsplash</a>
         </div>
         <div class="container-right">
