Added id's to inputs

--- a/index.html
+++ b/index.html
@@ -27,44 +27,44 @@
                 <form action="post">
                     <div class="fr">
                         <div>
-                            <label for="">First Name</label>
+                            <label for="user_firstname">First Name</label>
                         </div>
                         <div>
-                            <input type="text">
+                            <input type="text" id="user_firstname" name="firstname">
                         </div>
                         
                         <div>
-                            <label for="">Email</label>
+                            <label for="user_email">Email</label>
                         </div>
                         <div>
-                            <input type="email" name="" id="">
+                            <input type="email" name="email" id="user_email">
                         </div>
                         <div>
-                            <label for="">Password</label>
+                            <label for="user_password">Password</label>
                         </div>
                         <div>
-                            <input type="password" name="" id="">
+                            <input type="password" name="password" id="user_password">
                         </div>
                     </div>
                     <div class="fr">
                         <div>
-                            <label for="">Last Name</label>
+                            <label for="user_lastname">Last Name</label>
                         </div>
                         <div>
-                            <input type="text">
+                            <input type="text" name="lastname" id="user_lastname">
                         </div>
                         <div>
-                            <label for="">Phone Number</label>
+                            <label for="user_phone">Phone Number</label>
                         </div>
                         <div>
-                            <input type="number" name="" id="">
+                            <input type="number" name="phone" id="user_phone">
                         </div>
                         
                         <div>
-                            <label for="">Confirm Password</label>
+                            <label for="user_confirmpassword">Confirm Password</label>
                         </div>
                         <div>
-                            <input type="password" name="" id="">
+                            <input type="password" name="confirmpassword" id="user_confirmpassword">
                         </div>
                     </div>
                 </form>
