Fixed file paths

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="container-left">
             <div class="logo">
-                <img src="/images/1378227419.svg" alt="cube" height="80px">
+                <img src="./images/1378227419.svg" alt="cube" height="80px">
                 <p class="logo-text">CUBEX</p>
             </div>
             <a href="https://unsplash.com/@tarun_gudipalli" class="credit">Photo by Tarun on Unsplash</a>
